--- a/SpaceInvadersTest.vcxproj
+++ b/SpaceInvadersTest.vcxproj
@@ -78,6 +78,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="BackGround.cpp" />
+    <ClCompile Include="Barrier.cpp" />
     <ClCompile Include="Global.cpp" />
     <ClCompile Include="Spaceship.cpp" />
     <ClCompile Include="Bullet.cpp" />
@@ -86,6 +87,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BackGround.h" />
+    <ClInclude Include="Barrier.h" />
     <ClInclude Include="Spaceship.h" />
     <ClInclude Include="Bullet.h" />
     <ClInclude Include="Enemy.h" />
