--- a/SpaceInvadersTest.vcxproj.filters
+++ b/SpaceInvadersTest.vcxproj.filters
@@ -8,6 +8,7 @@
     <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="Test.cpp" />
     <ClCompile Include="Barrier.cpp" />
+    <ClCompile Include="Highscores.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BackGround.h" />
@@ -16,6 +17,7 @@
     <ClInclude Include="Enemy.h" />
     <ClInclude Include="Global.h" />
     <ClInclude Include="Barrier.h" />
+    <ClInclude Include="Highscores.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
